--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hirao-kukutyann",
   "version": "1.0.0",
+  "type": "module",
   "dependencies": {
     "firebase": "^11.0.2",
     "node-fetch": "^3.3.2",
