--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
       "api/chat.edge.js": {
-        "runtime": "edge",
+        "runtime": "@vercel/edge@1.0.0",
         "memory": 256,
         "maxDuration": 60
       }
