--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
+    "version": 2,
     "functions": {
       "api/chat.edge.js": {
-        "runtime": "@vercel/edge@1.0.0",
-        "memory": 256,
-        "maxDuration": 60
+        "runtime": "@vercel/node@2.0.0"
       }
-    }
+    },
+    "routes": [
+      {
+        "src": "/api/chat",
+        "dest": "/api/chat.edge.js"
+      }
+    ]
   }
